[package]
name = "lomanai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdl = "4.6.0"
miette = { version = "5.5.0", features = ["fancy"] }
reqwest = { version = "0.11.13", features = ["multipart", "gzip"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
