[package]
name = "lomanai"
version = "0.1.0"
edition = "2021"
authors = ["Jean Manguy <jean@manguy.eu>"]
description = "Work in progress NCBI's Common Tree alternative in the terminal"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
miette = { version = "5.5.0", features = ["fancy"] }
reqwest = { version = "0.11.13", features = ["multipart", "gzip"] }
tokio = { version = "1.23.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
